# rocket-caching-layer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
static/: index.txt.pre-gziped
