[package]
name = "rocket-caching-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
flate2 = { version = "1.0.30", features = ["zlib"] }
rocket = { version = "0.6.0-dev", path = "../rocket/core/lib" }
